_generated-doc/2.16/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.version]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.version[quarkus.hibernate-search-orm.elasticsearch.version]`

[.description]
--
The version of Elasticsearch used in the cluster.

As the schema is generated without a connection to the server, this item is mandatory.

It doesn't have to be the exact version (it can be `7` or `7.1` for instance) but it has to be sufficiently precise
to choose a model dialect (the one used to generate the schema) compatible with the protocol dialect (the one used
to communicate with Elasticsearch).

There's no rule of thumb here as it depends on the schema incompatibilities introduced by Elasticsearch versions. In
any case, if there is a problem, you will have an error when Hibernate Search tries to connect to the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++`
endif::add-copy-button-to-env-var[]
--|ElasticsearchVersion 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.layout.strategy[quarkus.hibernate-search-orm.elasticsearch.layout.strategy]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure layout (e.g. index names, index aliases).

The referenced bean must implement `IndexLayoutStrategy`.

Available built-in implementations:

`simple`::
The default, future-proof strategy: if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex-000001`, an alias for write operations named `myindex-write`,
and an alias for read operations named `myindex-read`.
`no-alias`::
A strategy without index aliases, mostly useful on legacy clusters:
if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex`, and will not use any alias.

See
link:{hibernate-search-doc-prefix}#backend-elasticsearch-indexlayout[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexLayoutStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file]`

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file]`

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch.analysis.configurer]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure full text analysis (e.g. analyzers, normalizers).

The referenced bean must implement `ElasticsearchAnalysisConfigurer`.

See <<analysis-configurer>> for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.settings-file]`

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.mapping-file]`

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".analysis.configurer]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure full text analysis (e.g. analyzers, normalizers).

The referenced bean must implement `ElasticsearchAnalysisConfigurer`.

See <<analysis-configurer>> for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.version[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version]`

[.description]
--
The version of Elasticsearch used in the cluster.

As the schema is generated without a connection to the server, this item is mandatory.

It doesn't have to be the exact version (it can be `7` or `7.1` for instance) but it has to be sufficiently precise
to choose a model dialect (the one used to generate the schema) compatible with the protocol dialect (the one used
to communicate with Elasticsearch).

There's no rule of thumb here as it depends on the schema incompatibilities introduced by Elasticsearch versions. In
any case, if there is a problem, you will have an error when Hibernate Search tries to connect to the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_VERSION+++`
endif::add-copy-button-to-env-var[]
--|ElasticsearchVersion 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.layout.strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.layout.strategy[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.layout.strategy]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure layout (e.g. index names, index aliases).

The referenced bean must implement `IndexLayoutStrategy`.

Available built-in implementations:

`simple`::
The default, future-proof strategy: if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex-000001`, an alias for write operations named `myindex-write`,
and an alias for read operations named `myindex-read`.
`no-alias`::
A strategy without index aliases, mostly useful on legacy clusters:
if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex`, and will not use any alias.

See
link:{hibernate-search-doc-prefix}#backend-elasticsearch-indexlayout[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexLayoutStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_LAYOUT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_LAYOUT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.settings-file]`

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.mapping-file]`

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.analysis.configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.analysis.configurer]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure full text analysis (e.g. analyzers, normalizers).

The referenced bean must implement `ElasticsearchAnalysisConfigurer`.

See <<analysis-configurer>> for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.settings-file]`

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.schema-management.mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.mapping-file]`

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.analysis.configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus.hibernate-search-orm.-persistence-unit-name-.elasticsearch.indexes.-index-name-.analysis.configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".analysis.configurer]`

[.description]
--
A <<bean-reference-note-anchor,bean reference>> to the component
used to configure full text analysis (e.g. analyzers, normalizers).

The referenced bean must implement `ElasticsearchAnalysisConfigurer`.

See <<analysis-configurer>> for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM__PERSISTENCE_UNIT_NAME__ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===