_generated-doc/3.8/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config.adoc

:summaryTableId: quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-version]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-version[quarkus.hibernate-search-orm.elasticsearch.version]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-version[quarkus.hibernate-search-orm.elasticsearch."backend-name".version]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-version[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-version[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version]`


[.description]
--
The version of Elasticsearch used in the cluster.

As the schema is generated without a connection to the server, this item is mandatory.

It doesn't have to be the exact version (it can be `7` or `7.1` for instance) but it has to be sufficiently precise
to choose a model dialect (the one used to generate the schema) compatible with the protocol dialect (the one used
to communicate with Elasticsearch).

There's no rule of thumb here as it depends on the schema incompatibilities introduced by Elasticsearch versions. In
any case, if there is a problem, you will have an error when Hibernate Search tries to connect to the cluster.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++`
endif::add-copy-button-to-env-var[]
--|ElasticsearchVersion 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-layout-strategy]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-layout-strategy[quarkus.hibernate-search-orm.elasticsearch.layout.strategy]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-layout-strategy[quarkus.hibernate-search-orm.elasticsearch."backend-name".layout.strategy]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-layout-strategy[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".layout.strategy]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-layout-strategy[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.layout.strategy]`


[.description]
--
A xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean reference] to the component
used to configure layout (e.g. index names, index aliases).

The referenced bean must implement `IndexLayoutStrategy`.

Available built-in implementations:

`simple`::
The default, future-proof strategy: if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex-000001`, an alias for write operations named `myindex-write`,
and an alias for read operations named `myindex-read`.
`no-alias`::
A strategy without index aliases, mostly useful on legacy clusters:
if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex`, and will not use any alias.

See
link:{hibernate-search-docs-url}#backend-elasticsearch-indexlayout[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexLayoutStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.settings-file]`


[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file[quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.mapping-file]`


[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer[quarkus.hibernate-search-orm.elasticsearch.analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer[quarkus.hibernate-search-orm.elasticsearch."backend-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.analysis.configurer]`


[.description]
--
One or more xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:hibernate-search-orm-elasticsearch.adoc#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-per-index-configuration-overrides]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-per-index-configuration-overrides[Per-index configuration overrides]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.settings-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.settings-file]`


[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.mapping-file]`


[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See https://docs.jboss.org/hibernate/stable/search/reference/en-US/html_single/#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".analysis.configurer]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".analysis.configurer]`


[.description]
--
One or more xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:hibernate-search-orm-elasticsearch.adoc#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status]`


[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
-- a|
`green`, `yellow`, `red` 
|`yellow`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout]`


[.description]
--
How long we should wait for the status before failing the bootstrap.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-count]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count]`


[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size]`


[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size[quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size[quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size]`

`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit-elasticsearch-backend-build-time-config_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size[quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size]`


[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
